src/stylesheets/components/note/_list.scss
//
// Note list
// --------------------------------------------------

$panel-separator-color: #ddd !default;

.note.list {
  flex: 1 1 0;
  display: flex;
  flex-direction: column;

  .note {
    padding: $note-padding-top $default-padding-horizontal $note-padding-bottom;
    position: relative;

    &::before {
      content: " ";
      position: absolute;
      top: 0;
      right: $default-padding-horizontal;
      left: $default-padding-horizontal;
      height: 1px;
      background: $panel-separator-color;
    }

    &:first-child {
      &::before {
        content: none;
      }
    }

    &.active {
      color: $note-list-active-color;
      background: $note-list-active-bg;

      @at-root #{selector-replace(&, ".note.list", ".note.list:focus")} {
        color: $note-list-focus-color;
        background: $note-list-focus-bg;
      }

      &::before {
        content: none;
      }

      & + .note {
        border-top: 1px solid $note-list-active-bg;
        padding-top: ($note-padding-top - 1px);

        @at-root #{selector-replace(&, ".note.list", ".note.list:focus")} {
          border-top-color: $note-list-focus-bg;
        }

        &::before {
          content: none;
        }
      }
    }

    // CSS multiline truncate
    .css-multiline-truncate {
      @include css-multiline-truncate($note-lines);
    }
  }
}

